# PolarUV-client

./: .gitignore  CMakeLists.txt  LICENSE  README.md  camera.pro  conanfile.txt  main.cpp  mainwindow.cpp
src/: CMakeLists.txt  DataStruct.cpp  DataStruct.hpp  Startup.cpp  Startup.hpp  main.cpp  main.hpp
src/ClientApp/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  Slots.cpp
src/ClientApp/DataStructs/: CMakeLists.txt  ClientSettingsDto.cpp  CommandsStruct.cpp  DataStructs.hpp
src/ClientApp/DataStructs/ClientSettings/: ClientSettingsDto.hpp
src/ClientApp/DataStructs/RobotSettings/: RobotSettingsDto.hpp
src/ClientApp/ExceptionHandler/: CMakeLists.txt  ExceptionHandler.cpp  ExceptionHandler.hpp
src/ClientApp/Exceptions/BaseException/: BaseException.hpp
src/ClientApp/Exceptions/InvalidOperationException/: InvalidOperationException.hpp
src/ClientApp/Gamepad/: Gamepad.cpp  Gamepad.hpp
src/ClientApp/Protocols/: CMakeLists.txt  CommandsProtocol.cpp  RobotSettingsProtocol.cpp  VideoProtocol.cpp
src/ClientApp/Protocols/BaseProtocol/: BaseProtocol.hpp
src/ClientApp/Protocols/CommandsProtocol/: CommandsProtocol.hpp
src/ClientApp/Protocols/SettingsProtocol/: RobotSettingsProtocol.hpp
src/ClientApp/UI/: Actions.cpp  Animations.cpp  Buttons.cpp  Rendering.cpp  Resources.cpp  Slots.cpp  WidgetResources.cpp
src/ClientApp/UI/Indicators/: DepthIndicator.hpp  PitchIndicator.hpp  YawIndicator.hpp
src/ClientApp/UI/Resources/: MainWindowResources.hpp
src/ClientApp/Widgets/: CMakeLists.txt  Resources.hpp  RobotSettingsWidget.cpp  WidgetResources.hpp  Widgets.cpp  widgets.hpp
src/ClientApp/Widgets/Authorization/: AuthorizationWidget.cpp  AuthorizationWidget.hpp  AuthorizationWidget.ui  CMakeLists.txt  IPFunction.hpp
src/ClientApp/Widgets/Autorization/: AuthorizationWidget.cpp  AuthorizationWidget.hpp  AuthorizationWidget.ui  AutorizationWidget.cpp  AutorizationWidget.hpp  AutorizationWidget.ui  CMakeLists.txt  IPFunction.hpp  Settings.hpp
src/ClientApp/Widgets/CameraSettings/: CMakeLists.txt  CameraSettingsWidget.cpp  CameraSettingsWidget.hpp  CameraSettingsWidget.ui
src/ClientApp/Widgets/ClientSettings/: CMakeLists.txt  ClientSettingsWidget.cpp  ClientSettingsWidget.hpp  ClientSettingsWidget.ui  ControlsSettingsStruct.hpp
src/ClientApp/Widgets/Commands/: CMakeLists.txt  CommandsWidget.cpp  CommandsWidget.hpp  Gamepad.cpp  Gamepad.hpp
src/ClientApp/Widgets/CommandsSettings/: CMakeLists.txt  CommandsSettingsStruct.hpp  CommandsSettingsWidget.cpp  CommandsSettingsWidget.hpp  CommandsSettingsWidget.ui
src/ClientApp/Widgets/Display/: CMakeLists.txt  DisplayWidget.cpp  DisplayWidget.hpp  DisplayWidget.ui  DisplayWidgetActions.cpp  PaintCentralIndicator.cpp  PaintDepthIndicator.cpp  PaintTextInfo.cpp  PaintYawIndicator.cpp
src/ClientApp/Widgets/Input/: CMakeLists.txt  CommandsStruct.hpp  Gamepad.cpp  Gamepad.hpp  GamepadSettingsStruct.hpp  GamepadSettingsWidget.cpp  GamepadSettingsWidget.hpp  GamepadSettingsWidget.ui
src/ClientApp/Widgets/MoveSettings/: CMakeLists.txt  MoveSettingsMessage.proto  MoveSettingsWidget.cpp  MoveSettingsWidget.hpp  MoveSettingsWidget.ui  MoveSettingsWidgetActions.cpp
src/ClientApp/Widgets/PythonEnvironment/: CMakeLists.txt  PythonEnvironmentWidget.cpp  PythonEnvironmentWidget.hpp  PythonEnvironmentWidget.ui
src/ClientApp/Widgets/RobotSettings/: CMakeLists.txt  RobotSettingsWidget.cpp  RobotSettingsWidget.hpp  RobotSettingsWidget.ui  RobotSettingsWidgetActions.cpp
src/ClientApp/Widgets/Sensors/: CMakeLists.txt  PaintCentralIndicator.cpp  PaintDepthIndicator.cpp  (+3 more)
src/DataProtocol/: CMakeLists.txt  DataProtocol.cpp  DataProtocol.hpp
src/Input/: Input.hpp
src/Lib/: CMakeLists.txt  Lib.cpp  Lib.hpp  Singleton.hpp
src/Lib/Client/: CMakeLists.txt  Client.hpp  Core.cpp
src/Lib/Coroutines/: All.hpp  Default.hpp
src/Lib/DataStructs/: CMakeLists.txt  ClientSettingsDto.cpp  CommandsStruct.cpp  DataStructs.hpp  MotorsStruct.cpp  OldRobotSettingsDto.cpp  RobotSettingsDto.cpp  StaticMap.hpp  VideoPipelineStruct.cpp
src/Lib/Drawer/: Drawer.hpp
src/Lib/Exceptions/: CMakeLists.txt  ExceptionHandler.cpp  ExceptionHandler.hpp  Exceptions.hpp
src/Lib/Gamepad/: Gamepad.cpp  Gamepad.hpp
src/Lib/Logger/: CMakeLists.txt  Logger.cpp  Logger.hpp
src/Lib/Network/: CMakeLists.txt  Network.cpp  Network.hpp  Packet.hpp
src/Lib/Protocols/: CMakeLists.txt  CommandsProtocol.cpp  Protocols.hpp  RobotSettingsProtocol.cpp  Socket.cpp  VideoProtocol.cpp
src/Lib/Screenshotter/: CMakeLists.txt  ScreenShotterQueue.hpp  Screenshotter.cpp  Screenshotter.hpp
src/Lib/TcpSession/: CMakeLists.txt  Packet.hpp  TcpSession.cpp  TcpSession.hpp
src/Lib/ThreadSafeQueue/: ThreadSafeQueue.hpp
src/Lib/VideoStream/: CMakeLists.txt  Gstreamer.cpp  Gstreamer.hpp  VideoStream.cpp  VideoStream.hpp  VideoStreamMessage.proto
src/MainWindow/: CMakeLists.txt  IState.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  UI_Theme.xml
src/MainWindow/DataProtocol/: CMakeLists.txt  DataProtocol.cpp  DataProtocol.hpp  IDataStream.hpp  Socket.cpp  Socket.hpp
src/MainWindow/DataStructs/: CMakeLists.txt  ClientSettingsStruct.cpp  DataStructs.hpp  RobotSettingsStruct.cpp  SettingsStruct.cpp
src/MainWindow/ExceptionHandler/: CMakeLists.txt  ExceptionHandler.cpp  ExceptionHandler.hpp
src/MainWindow/Exceptions/: CMakeLists.txt  Exceptions.hpp
src/MainWindow/Gamepad/: CMakeLists.txt  Gamepad.cpp  Gamepad.hpp
src/MainWindow/Input/: CMakeLists.txt  Gamepad.cpp  Gamepad.hpp  Input.hpp
src/MainWindow/Protocols/: BaseProtocol.cpp  CMakeLists.txt  CommandsProtocol.cpp  IStateGetter.hpp  Protocols.hpp  RobotSettingsProtocol.cpp  SettingsProtocol.cpp  Socket.cpp  VideoProtocol.cpp
src/MainWindow/UI/: Actions.cpp  Buttons.cpp  Functions.cpp  Indicators.cpp  Rendering.cpp  Resources.cpp  Shortcuts.cpp
src/MainWindow/VideoProcessing/: CMakeLists.txt  VideoProcessing.cpp  VideoProcessing.hpp
src/Pipelines/: client.txt  robot.txt
src/Renderer/: CMakeLists.txt
src/Resources/: CMakeLists.txt
src/Resources/Pipelines/: client.txt  robot.txt
(+38 files in other folders)
